# Estatisticas_Next_Torneio

./: .gitignore  MyComponent copy.tsx  README.md  app.py  check_status.py  check_status_everyone_everything.py  components.py  consultaDuckDB.py  database.sql  filters.py  fix_history.py  get_ex_members.py  get_lurkers.py  init_db.py  layout.py  lembretes_proximos desenvolvimentos.txt  requirements.txt  team_users.db  update_tournaments.py  utils.py  visualizations.py
chessboard_component/: MANIFEST.in  README.md  __init__.py  example.py  pyproject.toml
chessboard_component/chessboard_component/: __init__.py
chessboard_component/chessboard_component/frontend/: package-lock.json  package.json
chessboard_component/chessboard_component/frontend/src/: MyComponent.tsx
chessboard_component/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
chessboard_component/frontend/src/: MyComponent.tsx  index.tsx
data/: circuitos_map.json  team_users.db
player_data/: banned_players.json  ex_members.json  inactive_players.json  lurkers.json  members_active.json  members_inactive.json  players.json  status_metadata.json  tournament_participants.json  tournament_results_all.json  tournament_results_by_tournament.json  tournament_results_top3.json  tournaments_all.json  users_all.json  users_banned.json  users_closed.json  users_lurkers.json
scripts_cron/: check_status_everyone_everything.py  feed_turso.py  fix_history.py  games_to_hugging_faces.py  update_tournaments.py  update_tournaments2.py
tools/: README.md  classificador.py  (+5 more)
(+989 files in other folders)
