[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessboard_component"
version = "0.0.1"
description = "Use and move the pieces in a chessboard"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Kauan Werlich", email = "kauanhenrique.werlich@gmail.com" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["chessboard_component*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
chessboard_component = ["frontend/build/**/*", "pyproject.toml"]
